--- a/BlazorAllTheThings/BlazorAllTheThings.Mobile/wwwroot/index.html
+++ b/BlazorAllTheThings/BlazorAllTheThings.Mobile/wwwroot/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>BlazorAllTheThings.Mobile</title>
     <base href="/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <!-- TODO: [ 9] 2 [Shared Library] Add `_content/BlazorAllTheThings.Shared/` to all shared things -->
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="BlazorAllTheThings.Mobile.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
 </head>
