--- a/BlazorAllTheThings/BlazorAllTheThings.Mobile/wwwroot/index.html
+++ b/BlazorAllTheThings/BlazorAllTheThings.Mobile/wwwroot/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>BlazorAllTheThings.Mobile</title>
     <base href="/" />
+    <!-- TODO: [10]  2 [Shared Mobile] Add `_content/BlazorAllTheThings.Shared/` to all shared things -->
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="BlazorAllTheThings.Mobile.styles.css" />
